Fixes some potential code problems (after an inspection with FindBugs)
git-svn-id: https://gama-platform.googlecode.com/svn/branches/GAMA_CURRENT@12178 b91ef52e-2b48-11df-9ab6-b1cdc0d4a89a